crates/worker-macros/tests/reactor/return_type-fail.stderr
error: reactor workers cannot return any value
 --> tests/reactor/return_type-fail.rs:4:69
  |
4 | fn Worker(_scope: ::gloo::worker::reactor::ReactorScope<(), ()>) -> u32 {
  |                                                                     ^^^
